    ADDED: splitter: pre-defined 650MB and 700MB CD-R
    ADDED: more Konfigurator Tooltips    
    ADDED: usermenu: entry to open konfigurator with the useraction-page directly
    ADDED: import/export of keyboard shortcuts
    ADDED: mouse selection modes are back! thanks to heiner for doing the work
    ADDED: virtual VFS (try virt:/somthing/)

    FIXED: [ 1109249 ] drag and drop doesn't work with international characters
    FIXED: viewer cannot open 600 files, when the owner column is enabled
    FIXED: ftp_vfs overloads the CPU at stepping into a slow server on the network
    FIXED: krusader's detection of old or incompatible versions
    FIXED: dirk's patch for better looking icons
    FIXED: cannot open FTP proxy bookmarks
    FIXED: [ 1101237 ] the reload shortcut is always set to Ctrl+R at startup
    FIXED: rename extension bug in kde 3.3
    FIXED: crash on startup due to restoring of last size and position
    FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
    FIXED: resizing of the main window produces strange effencts
    FIXED: double dragging in Krusader and Konqueror selection modes
    FIXED: right click menu and user action ID turmoil    
    FIXED: [ 1074393 ] Crashes sometimes on startup (thanks Heiner)
    FIXED: custom icons in bookmarks weren't shown
    FIXED: All openUrl() calls are now delayed to avoid deadlocks...

  UPDATED: remoteman was disabled. from now on, bookmark manager only
  UPDATED: German translation


1.51
======================
    ADDED: Portuguese translation (thanks Bruno Queiros)
    ADDED: Fn keys can have custom shortcuts
    ADDED: krusader can be resized to a small size even with Fn keys showing
    ADDED: Total-commander style refresh (at last)
    ADDED: ctrl-up arrow (from the panel) goes up to the origin bar
    ADDED: New commandline option: --profile <panel-profile>
    ADDED: Heiner's selection mode patch. Still alpha.
    ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)